@@ -14,6 +14,11 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+27 May 2015  A.Ribon      (hadr-cross-V10-00-20)
+---------------------------------------------------
+- G4ComponentGGHadronNucleusXsc : Grichine's extension of applicability
+  for kaons down to 0.1*MeV
+
 06 February 2015 W.Pokorski (hadr-cross-V10-00-19)
 ------------------------------------------------
 - including V.Grishine change in G4ComponentGGHadronNucleusXsc to work
